# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

SUBDIRS = utils

functionlocaldir = $(prefix)/yaim/functions/local
dist_functionlocal_SCRIPTS = config_gip_glue2_storm \
    config_gip_storm \
    config_ntp \
    config_storm_backend \
    config_storm_checksum \
    config_storm_dir \
    config_storm_frontend \
    config_storm_generic \
    config_storm_globus_gridftp \
    config_storm_gridhttps_plugin_properties \
    config_storm_gridhttps_server_logging \
    config_storm_mysql \
    config_storm_namespace \
    config_storm_properties \
    config_storm_rfio \
    config_storm_secure_tomcat \
    config_storm_sslkey \
    config_storm_start_tomcat \
    config_storm_stop_tomcat \
    config_storm_tomcat_default_servlet \
    config_storm_used_space

MAINTAINERCLEANFILES = Makefile.in
